--- a/cmd/http/utils/resource/css/song_list.css
+++ b/cmd/http/utils/resource/css/song_list.css
@@ -23,7 +23,7 @@
 
 .left-filter-block {
     width: 100%;
-    /*position: absolute;*/
+
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
@@ -31,7 +31,7 @@
     align-items: baseline;
     background-position: left;
     padding-top: 70px;
-    /*padding-right: 10px*/
+
 }
 
 .left-filter-block .left-filter-panel {
@@ -45,19 +45,6 @@
     color: whitesmoke;
     margin-top: 0;
     z-index: 1;
-}
-
-.card {
-    color: whitesmoke;
-    background: #1d2124;
-    margin-bottom: 10px;
-    opacity: 0.8;
-    max-width: 397px;
-    max-height: 166px;
-    min-width: 303px;
-    min-height: 166px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .page-item {
@@ -94,7 +81,24 @@ button.btn.btn-dark {
 }
 
 .placeholder {
-    color: dimgray;
+    color: #b3b3b3;
+}
+
+.form-control::placeholder {
+    color: #b3b3b3;
+    opacity: 1;
+}
+
+.form-control:-ms-input-placeholder {
+    color: #b3b3b3;
+}
+
+.form-control::-ms-input-placeholder {
+    color: #b3b3b3;
+}
+
+input.form-control::placeholder {
+    color: #b3b3b3;
 }
 
 .form-control option {
@@ -111,4 +115,93 @@ button.btn.btn-dark {
 
 div .card:hover {
     cursor: pointer;
+}
+
+.card-text p {
+    font-size: 9px;
+}
+
+.card {
+    color: whitesmoke;
+    background: #1d2124;
+    margin-bottom: 10px;
+    opacity: 0.8;
+    max-width: 450px;
+    min-width: 450px;
+    display: flex; /
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card-body {
+    display: flex;
+}
+
+.card-title, .card-text {
+    font-size: 0.875rem;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.card-image-container {
+    flex: 1;
+    text-align: center;
+}
+
+.ratings-comments {
+    font-size: 0.825rem;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.card-text-container {
+    flex: 3;
+    padding: 0 10px;
+}
+
+.card-text {
+    margin: 0;
+}
+
+.fa-star {
+    color: #ffd700;
+}
+
+.star-icon {
+    margin-left: 5px;
+    color: #ffd700;
+}
+
+.card-text-container {
+    flex: 3;
+    padding: 0 10px;
+}
+
+.card-text {
+    margin: 0;
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.label {
+    color: #DAA520;
+}
+
+.value {
+    color: #ADFF2F;
+    font-size: 13px;
+}
+
+.rating-container {
+    display: flex;
+    align-items: center;
 }
