--- a/cmd/http/utils/resource/template/base/navbar.gohtml
+++ b/cmd/http/utils/resource/template/base/navbar.gohtml
@@ -14,7 +14,7 @@
                         <a class="nav-link" href="/auth/login"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/signup"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a> <!-- Make sure this is the correct link -->
+                        <a class="nav-link" href="/auth/login"><i class="fa fa-user-plus" aria-hidden="true"></i> Sign Up</a> <!-- Make sure this is the correct link -->
                     </li>
                 {{ else }}
                     <!-- User Dropdown Menu -->
