--- a/cmd/http/utils/resource/css/song_list.css
+++ b/cmd/http/utils/resource/css/song_list.css
@@ -113,95 +113,59 @@ input.form-control::placeholder {
     font-weight: normal;
 }
 
+
 div .card:hover {
     cursor: pointer;
 }
 
-.card-text p {
-    font-size: 9px;
-}
-
 .card {
+    text-decoration: none;
     color: whitesmoke;
     background: #1d2124;
     margin-bottom: 10px;
     opacity: 0.8;
-    max-width: 450px;
-    min-width: 450px;
-    display: flex; /
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 17rem;
+    min-width: 17rem;
+    max-height: 17rem;
+    min-height: 17rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 1rem;
+    border-radius: 0.5rem;
 }
-
 .card-body {
+    padding: 0.6rem;
+    flex-grow: 1;
     display: flex;
+    flex-direction: column;
+}
+a.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+.card-label {
+    color: #adb5bd;
+    font-size: 0.9rem;
+    margin-bottom: 0.2rem;
 }
 
-.card-title, .card-text {
-    font-size: 0.875rem;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+.card-title {
+    font-weight: bold;
+    color: #ffc107;
+    margin-top: 0.5rem;
+    margin-bottom: 0.6rem;
+}
+.card-footer {
+    padding: 0.5rem 1rem;
 }
 
-.card-image-container {
-    flex: 1;
-    text-align: center;
+.card:hover {
+    cursor: pointer;
 }
 
-.ratings-comments {
-    font-size: 0.825rem;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.card-text-container {
-    flex: 3;
-    padding: 0 10px;
-}
-
-.card-text {
-    margin: 0;
-}
-
-.fa-star {
-    color: #ffd700;
-}
-
-.star-icon {
-    margin-left: 5px;
-    color: #ffd700;
-}
-
-.card-text-container {
-    flex: 3;
-    padding: 0 10px;
-}
-
-.card-text {
-    margin: 0;
-}
-
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.label {
-    color: #DAA520;
-}
-
-.value {
-    color: #ADFF2F;
-    font-size: 13px;
-}
-
-.rating-container {
-    display: flex;
-    align-items: center;
+.star-icon, .comment-icon {
+    color: #ffc107;
 }
