- added midi player

--- a/cmd/http/utils/resource/template/song/song_details.gohtml
+++ b/cmd/http/utils/resource/template/song/song_details.gohtml
@@ -4,19 +4,37 @@
             <div class="header">
                 <div class="card song-details-card">
                     <div class="card-header">
-                        <h2 class="card-title"><i class="fa fa-music" aria-hidden="true"></i> &nbsp; {{ .Data.Artist }} - {{ .Data.Title }} {{if eq .Data.CanEdit true}}&nbsp; <a href="" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil-square-o" style="font-size: 16px" aria-hidden="true"></i>
+                        <h2 class="card-title"><i class="fa fa-music" aria-hidden="true"></i> &nbsp; {{ .Data.Artist }}
+                            - {{ .Data.Title }} {{if eq .Data.CanEdit true}}&nbsp; <a href="" data-toggle="tooltip"
+                                                                                      title="Edit"><i
+                                        class="fa fa-pencil-square-o" style="font-size: 16px" aria-hidden="true"></i>
                             </a> {{end}}</h2>
                     </div>
                     <div class="card-body">
-                        <p class="card-text"><span class="text-yellow"><strong>Artist:</strong></span> {{ .Data.Artist }}</p>
-                        <p class="card-text"><span class="text-yellow"><strong>Title:</strong></span> {{ .Data.Title }}</p>
-                        <p class="card-text"><span class="text-yellow"><strong>Ensemble Size:</strong></span> {{ .Data.EnsembleSizeString }}</p>
-                        <p class="card-text"><span class="text-yellow"><strong>Genre:</strong></span> {{ range .Data.Genre }}{{ .Name }}{{ end }}</p>
-                        <p class="card-text"><span class="text-yellow"><strong>Rating:</strong></span> {{ .Data.Rating }} <i class="fa fa-star"></i></p>
-                        <p class="card-text"><span class="text-yellow"><strong>Uploader:</strong></span> {{ .Data.Uploader }}</p>
+                        <p class="card-text"><span
+                                    class="text-yellow"><strong>Artist:</strong></span> {{ .Data.Artist }}</p>
+                        <p class="card-text"><span class="text-yellow"><strong>Title:</strong></span> {{ .Data.Title }}
+                        </p>
+                        <p class="card-text"><span
+                                    class="text-yellow"><strong>Ensemble Size:</strong></span> {{ .Data.EnsembleSizeString }}
+                        </p>
+                        <p class="card-text"><span
+                                    class="text-yellow"><strong>Genre:</strong></span> {{ range .Data.Genre }}{{ .Name }}{{ end }}
+                        </p>
+                        <p class="card-text"><span
+                                    class="text-yellow"><strong>Rating:</strong></span> {{ .Data.Rating }} <i
+                                    class="fa fa-star"></i></p>
+                        <p class="card-text"><span
+                                    class="text-yellow"><strong>Uploader:</strong></span> {{ .Data.Uploader }}</p>
                     </div>
-                    <button id="#download" class="btn btn-primary"><i class="fa fa-download" aria-hidden="true"></i>
-                        Download</button>
+                    <midi-player
+                            src="/song/download/{{ .Data.ID }}"
+                            sound-font visualizer="#myPianoRollVisualizer">
+                    </midi-player>
+
+                    <button id="#download" onclick="location.href='/song/download/{{ .Data.ID }}?disposition=attachment';" class="btn btn-primary"><i class="fa fa-download" aria-hidden="true"></i>
+                        Download
+                    </button>
                     <div class="comments-section">
                         <h3 class="comments-title">Comments:</h3>
                         <div class="comments">
@@ -31,7 +49,8 @@
                         <div class="comment-form">
                             <form action="/song/{{ .Data.ID }}/comment" method="POST">
                                 <div class="form-group">
-                                    <textarea class="form-control" name="comment" maxlength="500" placeholder="Add a comment..."></textarea>
+                                    <textarea class="form-control" name="comment" maxlength="500"
+                                              placeholder="Add a comment..."></textarea>
                                 </div>
                                 <button type="submit" id="submitComment" class="btn btn-primary">Submit Comment</button>
                             </form>
